<resources>
    <string name="app_name" translatable="false">Trivia 2000</string>
    <string name="play">Play</string>
    <string name="game_title" translatable="false">TRIVIA 2000</string>
    <string name="music">Music</string>
    <string name="play_music">Music?</string>
    <string name="background">background</string>
    <string-array name="modes">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="begin_quiz">Begin Quiz</string>
    <string name="soccer">SOCCER</string>
    <string name="basketball">BASKETBALL</string>
    <string name="movies">MOVIES</string>
    <string name="random">RANDOM</string>
    <string name="event_icon" translatable="false" />
    <string name="play_again">Play Again</string>
    <string name="score_description">Your Score:</string>
    <string name="player_name">Your Name:</string>
    <string name="swipe_information">Swipe the screen to get a new question!</string>
    <string name="_2000" translatable="false">2000</string>
    <string name="trivia" translatable="false">TRIVIA</string>
</resources>