<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/black"
    tools:context=".TopicPickerActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/SoccerImageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/soccer_ball"
                android:contentDescription="@string/background" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin_quiz" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soccer"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/BasketballImageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@drawable/luka" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin_quiz" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basketball"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/MusicImageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/music"
                android:contentDescription="@string/background" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin_quiz" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/MoviesImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@drawable/movies" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin_quiz" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/RandomImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:src="@drawable/pepsi" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin_quiz" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>