<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".GameEndActivity"
    >

    <Button
        android:id="@+id/play_again"
        android:layout_width="299dp"
        android:layout_height="50dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score"
        app:layout_constraintVertical_bias="0.329" />

    <TextView
        android:id="@+id/score"
        android:layout_width="77dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:textColor="#FF000000"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/GameOver"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#050505"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_box"
        android:layout_width="134dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toTopOf="@+id/play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score"
        app:layout_constraintVertical_bias="0.211"
        android:autofillHints=""
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:name="edu.moravian.csci299.Trivia2000.HighScoreFragment"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="193dp"
        android:layout_height="61dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/score_description"
        android:textSize="37sp"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="137dp"
        android:layout_height="37dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/player_name"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />


</androidx.constraintlayout.widget.ConstraintLayout>
